# RIS-project

./: .gitignore  README.md  instructions.md  pyproject.toml
demonstration/: __init__.py  __main__.py  attack_demo.py  debug_protocol.py  detailed_debug.py  protocol_demo.py  security_demo.py
evaluation/: __init__.py  benchmark.py  communication_cost.py  computational_cost.py
evaluation/config/: config.yaml
evaluation/docker/: Dockerfile.cloud  Dockerfile.fog  Dockerfile.vehicle  docker-compose.yml
scheme/: __init__.py  common.py  cs.py  fog_node.py  vehicle.py
simulations/: __init__.py  __main__.py  aggregate_results.py  benchmarks.py  communication_cost.py  computational_cost.py  run_simulation.py
simulations/configs/: config.yaml
simulations/configs/benchmark/: default.yaml
simulations/configs/device/: cloud_server.yaml  fog_node.yaml  vehicle.yaml
simulations/configs/evaluation/: default.yaml
simulations/docker/: Dockerfile  compose.yaml
simulations/results/: simulation_results_cloud_server.json  simulation_results_fog_node.json  simulation_results_vehicle.json
visualization/: __init__.py  protocol_animation.py
visualization/configs/: config.yaml
